--- a/California.html
+++ b/California.html
@@ -35,9 +35,9 @@ body {font-family: "Lato", sans-serif}
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
+  <a href="#tour" class="w3-bar-item w3-button w3-padding-large">FOOD</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">SOCIAL LIFE</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large">FASHION</a>
 </div>
 
 <!-- Page content -->
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
   <!-- The Band Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">California</h2>
-    <p class="w3-opacity"><i>Welcom</i></p>
+    <p class="w3-opacity"><i>Welcome to the Golden State!</i></p>
     <p class="w3-justify">California has the largest state population currently in the U.S. It is located on the western coast of the U.S. and is bordered by three different states; Oregon, Nevada, and Arizona. California even borders Mexico! Los Angeles, or LA, is the most populous city in California! 
 </p>
     <div class="w3-row w3-padding-32">
@@ -92,12 +92,12 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-black" id="tour">
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
       <h2 class="w3-wide w3-center">FOOD</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p><br>
+      <p class="w3-opacity w3-center"><i>Want to indulge in some native Cali cuisine?</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">IN-N-OUT Burger<span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding"> Roscoe’s House of Chicken and Waffles<span class="w3-tag w3-red w3-margin-left">Sold out</span></li>
-        <li class="w3-padding"> Nico’s Mexican Food<span class="w3-badge w3-right w3-margin-right">3</span></li>
+        <li class="w3-padding">IN-N-OUT Burger<span class="w3-tag w3-red w3-margin-left"></span></li>
+        <li class="w3-padding"> Roscoe’s House of Chicken and Waffles<span class="w3-tag w3-red w3-margin-left"></span></li>
+        <li class="w3-padding"> Nico’s Mexican Food<span class="w3-badge w3-right w3-margin-right"></span></li>
       </ul>
 
       <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -115,7 +115,7 @@ body {font-family: "Lato", sans-serif}
           <div class="w3-container w3-white">
             <p><b> My Vegan Gold</b></p>
             <p class="w3-opacity">4319 W. Sunset Blvd., Los Angeles, CA 90029 (Silver Lake)</p>
-            <p>Vegan or interested in some vegan delights? Check out My Vegan Gold for some guilt free guilty pleasures!</p>
+            <p>Interested in some vegan delights? Check out My Vegan Gold for some guilt free guilty pleasures!</p>
             <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
           </div>
         </div>
